# pdfium

./: .gitignore  .releaserc  CHANGELOG.md  CHECKSUMS  CLAUDE.md  Cargo.toml  LICENSE.md  MIGRATION.md  PLAN.md  README.md  biome.json  package.json  playwright.config.ts  playwright.editor.config.ts  pnpm-lock.yaml  renovate.json  stryker.config.json  tsconfig.json  tsconfig.test.json  tsup.config.ts  typedoc.json  vite.test.config.ts  vitest.bench.config.ts  vitest.config.ts  vitest.visual.config.ts
.github/workflows/: checks.yml  ci.yml  deploy-docs.yml  release.yml  update-pdfium.yml
crate/: bindings.rs  lib.rs  library.rs  napi_bindings.rs
demo/: .gitignore  README.md
demo/node/: README.md  index.node.mjs  index.ts  package.json  pnpm-lock.yaml
demo/plain/: README.md  index.html  main.html  standalone.html
demo/scripts/: dev-editor.ts  ensure-lib-build.ts  lib-build-state.ts  make-standalone.ts  setup.ts  verify-lib-build.ts
demo/vite/: README.md  (+9 more)
docs/: .gitignore  DOCS_VOICE_GUIDE.md  EDITOR_REMEDIATION_PLAN.md  README.md  astro.config.ts  package.json  pnpm-lock.yaml  react-architecture-index.md  react-architecture.md  react-contributor-playbook.md  react-testing.md
scripts/: build-docs-strict-utils.ts  build-docs-strict.ts  check-doc-links.ts  check-pdfium-updates.ts  check-size.ts  download-pdfium.ts  finalize-react-build.ts  license-check.ts  normalize-api-docs.ts  postinstall.js  publish-natives.sh  verify-worker-runtime.ts
src/: browser.ts  env.d.ts  index.ts  node.ts  pdfium.ts  react.ts  worker.ts
test/: helpers.ts  react-setup.ts  setup.ts
(+1667 files in other folders)
